# codelab_bazel

./: .bazelrc  .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  compile-pip-deps.sh  junit5.bzl  requirements.in  requirements.txt  requirements_lock.txt
docs/: hermetic_python.md  python_pkg.md  python_w_bazel.md
examples/beam/: BUILD  BUILD.bazel  word_count.py
examples/docker/: BUILD
examples/grpc/: BUILD  greeter_client.py  greeter_server.py  hello_world.proto  person.proto
examples/java/: BUILD  PersonProtoTest.java
examples/proto/: BUILD  address.proto  person.proto
examples/py/: BUILD  BUILD.bazel  bin.py  fail.py  greeter_client.py  greeter_server.py  greeter_service.py  greeter_service_test.py  person_py_proto_test.py  test.py
examples/py/fibonacci/: BUILD
examples/rust/: BUILD.bazel
notebook/: BUILD.bazel  main.py
platform/: BUILD  version_test.py
py_deps/: BUILD  compile-pip-deps.sh  gen_third_party_py_build.rs
rust/: BUILD.bazel
toolchain/: BUILD
toolchain/constraints/: BUILD
toolchain/python/: BUILD  BUILD.bazel
